--- a/newProfileBook/newProfileBook.Android/newProfileBook.Android.csproj
+++ b/newProfileBook/newProfileBook.Android/newProfileBook.Android.csproj
@@ -124,6 +124,9 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\ic_camera_alt_black.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\xml\file_paths.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
